<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />


    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="@+id/editLastName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editLastName"
        app:layout_constraintTop_toBottomOf="@+id/editLastName" />

    <EditText
        android:id="@+id/editFatherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/father_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editFatherName"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editFatherName"
        app:layout_constraintTop_toBottomOf="@+id/editFatherName" />

    <Button
        android:id="@+id/lifeDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/life_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBaseline_toBaselineOf="@+id/pressureButton"
        app:layout_constraintEnd_toStartOf="@+id/pressureButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pressureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
        android:text="@string/pressure_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lifeDataButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.58" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editFatherName"
        app:layout_constraintTop_toBottomOf="@+id/editFatherName" />


</androidx.constraintlayout.widget.ConstraintLayout>

