<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/upperPressureEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:hint="@string/high_pressure"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lowPressureEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/low_pressure"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/upperPressureEdit"
        app:layout_constraintTop_toBottomOf="@+id/upperPressureEdit" />

    <EditText
        android:id="@+id/pulseEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/puls"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lowPressureEdit"
        app:layout_constraintTop_toBottomOf="@+id/lowPressureEdit" />

    <CheckBox
        android:id="@+id/tachicardiaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tachicardia"
        app:layout_constraintStart_toStartOf="@+id/pulseEdit"
        app:layout_constraintTop_toBottomOf="@+id/pulseEdit" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="178dp"
        android:layout_height="136dp"
        android:layout_below="@+id/tachicardiaCheckBox"
        android:layout_centerHorizontal="true"
        android:calendarTextColor="#FFFFFF"
        android:calendarViewShown="true"
        android:dayOfWeekTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/savePressureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperPressureEdit" />

    <Button
        android:id="@+id/savePressureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>